# bert_ner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  inference.py  package.xml  requirements.txt  setup.py  slot_extractor_v1.py
data/: vocab.slot
data_generation/: action_server_constants.py  action_server_data_generation.py  action_server_data_generation_fct_call.json  constants.py  convert_json.py  data_generation.ipynb  data_generation_fct_call.json  data_sample.json  data_sample_2.json  data_sample_3.json
docs/: extending_vocabulary.md  teammate_setup.md
model/: inference.py  modeling_bert.py  slot_extractor.py  slot_extractor_v1.py
src/ner_model/: __init__.py  inference.py  mapper.py  model.py  parser.py
utils/: data_utils.py  trainer.py
